# i3-sway-spiral

./: Cargo.toml  README.md
src/: main.rs
