[package]
name = "i3-sway-spiral"
version = "0.1.0"
authors = ["Riccardo Attilio Galli <riccardo@sideralis.org>"]
edition = "2018"
repository = "https://github.com/riquito/i3-sway-spiral"
license = "AGPL-3.0-or-later"
readme = "README.md"

[dependencies]
env_logger = "0.7.1"
swayipc = "2.6.2"
log = "0.4.8"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
